--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,3 +1,10 @@
 @import "libraries/bourbon/bourbon";
 @import "grid-settings";
 @import "libraries/neat/neat";
+
+@import "base/normalize";
+@import "base/global";
+
+@import "components/intro";
+@import "components/nav";
+@import "components/about";
