--- a/src/scss/_grid-settings.scss
+++ b/src/scss/_grid-settings.scss
@@ -1,8 +1,8 @@
 @import "libraries/neat/neat-helpers";
 
 // Grid Guide
-$visual-grid: true;
-$visual-grid-color: pink;
+$visual-grid: false;
+$visual-grid-color: #40b9f6;
 $visual-grid-index: front;
 $visual-grid-opacity: 0.3;
 
