--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -2,21 +2,28 @@
   background: url('../images/cover1.jpg') no-repeat center center;
   display: table;
   width: 100%;
-  height: 70vh;
+  height: 100vh;
   background-size: cover;
   overflow: hidden;
   color: white;
+}
 
-  .content {
-    @include outer-container;
-  }
+.content {
+  @include outer-container;
+}
 
-  .intro-text {
-    display: table-cell;
-    vertical-align: middle;
-    margin-top: 27vh;
-    text-align: center;
-    @include span-columns(12);
+.intro-text {
+  display: table-cell;
+  vertical-align: middle;
+  margin-top: 35vh;
+  text-align: center;
+  @include span-columns(12);
+}
 
-  }
+.intro-title {
+  font-size: 3.5rem;
+}
+
+.intro-p {
+  font-size: 1.5rem;
 }
