--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -1,3 +1,10 @@
+//Colors
+$white: #ffffff;
+$dark-grey: #303030;
+$dark: #2a2a2a;
+
+
+//Navigation
 #nav {
   @include outer-container;
   position: absolute;
@@ -25,7 +32,7 @@ ul.navbar {
 
   li a {
     float: left;
-    color: #f2f2f2;
+    color: $white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -33,10 +40,10 @@ ul.navbar {
     font-size: 17px;
 
     a:hover {
-      border-bottom: 2px solid white;
+      border-bottom: 2px solid $white;
       }
   }
-  }
+}
 
 
 @media only screen and (max-width : 640px) {
@@ -44,27 +51,48 @@ ul.navbar {
     display: none;
   }
 
+  ul li, li a {
+    width: 100%;
+  }
+
   #mobile-menu {
-    display: inline-block !important;
+    display: block;
+    position: relative;
+    float: right;
     z-index: 999;
-    height: 24px;
-    width: 24px;
-    content: "";
+    font-size: 4.0rem;
+    color: $white;
+    text-decoration: none;
+    margin-right: 15px;
+    margin-top: -10px;
+  }
+
+  #nav.responsive {
+    background-color: $dark-grey;
   }
 
   ul.navbar.responsive {
-    background-color: black;
-    position: absolute;
-    display: inline;
+    background-color: $dark-grey;
+    position: relative;
+    display: block;
+    height: auto;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+  }
+
+  ul.navbar.responsive #mobile-menu {
+
   }
 
   ul.navbar.responsive li {
-    float: none;
-    display: inline;
-  }
-  ul.navbar.responsive li a {
-    display: block;
-    text-align: left;
+    float: left;
+    text-align: center;
   }
 
+  ul.navbar.responsive li a {
+    font-size: 1.2rem;
+    padding-bottom: 1.5rem;
+    border-bottom: 1px solid $dark;
+  }
 }
