Added portfolio and footer sections. Deleted unused cover images.

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -8,3 +8,6 @@
 @import "components/intro";
 @import "components/nav";
 @import "components/about";
+@import "components/what";
+@import "components/portfolio";
+@import "components/footer";
