--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -1,13 +1,38 @@
-.about {
+
+#about {
+  width: 100%;
+  background-color: #f9f9f9;
+  background-size: cover;
+  overflow: hidden;
+}
+.container {
   @include outer-container;
 }
 
-.about-text {
-  margin-top: 100px;
-  @include span-columns(6);
+.about-intro {
+  h2 {
+    text-align: center;
+    font-weight: 300;
+    font-size: 1.0rem;
+  }
 }
 
-.about-picture {
-  @include span-columns(6);
+.about-text {
+  @include span-columns(12);
+  margin-top: 3.0em;
+  padding-left: 10.0em;
+  padding-right: 10.0em;
+  margin-bottom: 6.0em;
+  p {
+    line-height: 150%;
+  }
+  a {
+    color: #ff0000;
+    text-decoration: none;
+  }
 
+  @media only screen and (max-width : 640px) {
+    padding-left: 2.5em;
+    padding-right: 2.5em;
+  }
 }
