--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -1,5 +1,8 @@
+$hover: rgba(#ffffff, 0.40);
+
 .intro {
-  background: url('../images/cover1.jpg') no-repeat center center;
+  background: url('../images/cover.jpg') no-repeat center;
+  //background: linear-gradient(140deg,  #2980b9 0%,#236183 50%,#2c3e50 100%);
   display: table;
   width: 100%;
   height: 100vh;
@@ -13,17 +16,31 @@
 }
 
 .intro-text {
+  @include span-columns(12);
   display: table-cell;
   vertical-align: middle;
   margin-top: 35vh;
   text-align: center;
-  @include span-columns(12);
 }
 
 .intro-title {
-  font-size: 3.5rem;
+  font-size: 2.5rem;
+  font-weight: 300;
 }
 
 .intro-p {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
+  font-weight: 300;
+}
+
+.fa-angle-down {
+  font-size: 2.0rem;
+  margin-top: 20px;
+  color: white;
+
+}
+
+a .fa-angle-down:hover {
+      color: $hover;
+      transition: 0.6s;
 }
