--- a/src/scss/components/_what.scss
+++ b/src/scss/components/_what.scss
@@ -36,7 +36,6 @@
     margin-bottom: 2em;
     margin-left: 2em;
     margin-right: 2em;
-
   }
 
   h2 {
@@ -53,6 +52,7 @@
   p {
     color: $base-font-color;
     line-height: $base-line-height;
+    text-align: left;
   }
 
   img {
