Changed the responsive menu navigation icon. Finalized the footer section.

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,6 +1,7 @@
 @import "libraries/bourbon/bourbon";
 @import "grid-settings";
 @import "libraries/neat/neat";
+@import "libraries/hamburgers/hamburgers";
 
 @import "base/normalize";
 @import "base/global";
