--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -20,10 +20,6 @@
     margin-bottom: $base-spacing;
   }
 
-  .fa {
-    font-size: 1.6em;
-  }
-
   ul {
     flex-basis: 13em;
     flex-shrink: 0;
@@ -32,8 +28,9 @@
   }
 
   li {
+    color: $footer-link-color;
     margin-bottom: 15px;
-    line-height: 1.5em;
+    line-height: 1.2em;
     list-style: none;
     text-align: center;
   }
@@ -41,16 +38,18 @@
   li a {
     color: $footer-link-color;
     text-decoration: none;
+    font-size: 0.9em;
 
     &:focus,
     &:hover {
       color: transparentize($footer-color, 0);
+      transition: 0.6s;
     }
   }
 
   li h3 {
     color: $footer-color;
-    font-size: 1em;
+    font-size: 0.8em;
     margin-bottom: 0.4em;
   }
 
