--- a/src/scss/components/_what.scss
+++ b/src/scss/components/_what.scss
@@ -1,3 +1,10 @@
+#what {
+  width: 100%;
+  background-color: #f9f9f9;
+  background-size: cover;
+  overflow: hidden;
+}
+
 .bullets {
   $base-line-height: 1.5em !default;
   $action-color: #477DCA !default;
