--- a/src/scss/components/_what.scss
+++ b/src/scss/components/_what.scss
@@ -5,10 +5,12 @@
   overflow: hidden;
 }
 
+.container {
+  @include outer-container;
+}
+
 .bullets {
   $base-line-height: 1.5em !default;
-  $action-color: #477DCA !default;
-  $dark-gray: #333 !default;
   $base-font-color: $dark-gray !default;
   $icon-bullet-size: 7.5em;
 
@@ -19,13 +21,7 @@
   margin-bottom: 10em;
   overflow: auto;
   padding: 0;
-  padding-left: 10em;
-  padding-right: 10em;
 
-  @media only screen and (max-width : 1000px) {
-    padding-left: 0.5em;
-    padding-right: 0.5em;
-  }
 
   .bullet {
     flex-basis: 20em;
