--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -7,6 +7,8 @@
     text-align: center;
     font-weight: 300;
     font-size: 1.0rem;
+    padding-left: 2.0rem;
+    padding-right: 2.0rem;
   }
 }
 
