--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -23,7 +23,7 @@
   ul {
     flex-basis: 13em;
     flex-shrink: 0;
-    margin-bottom: $base-spacing * 2;
+    margin-bottom: $base-spacing / 2;
     padding: 0;
   }
 
