--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -25,6 +25,10 @@
     flex-shrink: 0;
     margin-bottom: $base-spacing / 2;
     padding: 0;
+
+    li {
+      font-size: 0.8em;
+    }
   }
 
   li {
@@ -38,7 +42,6 @@
   li a {
     color: $footer-link-color;
     text-decoration: none;
-    font-size: 0.9em;
 
     &:hover {
       color: transparentize($footer-color, 0);
@@ -48,7 +51,7 @@
 
   li h3 {
     color: $footer-color;
-    font-size: 0.8em;
+    font-size: 0.9em;
     margin-bottom: 0.4em;
   }
 
@@ -60,10 +63,14 @@
 
   p {
     color: $footer-disclaimer-color;
-    font-size: 0.9em;
+    font-size: 0.8em;
     line-height: 1.5em;
     margin: auto;
     max-width: 35em;
     text-align: center;
+  }
+
+  i {
+    margin-right: 7px;
   }
 }
