--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -20,16 +20,26 @@ $hover: rgba(#ffffff, 0.40);
   vertical-align: middle;
   margin-top: 35vh;
   text-align: center;
+
+  @media only screen and (max-width : 640px) {
+    margin-top: 30vh;
+  }
 }
 
 .intro-title {
   font-size: 2.5rem;
   font-weight: 300;
+  @media only screen and (max-width : 640px) {
+    font-size: 2.2rem;
+  }
 }
 
 .intro-p {
   font-size: 1.2rem;
   font-weight: 300;
+  @media only screen and (max-width : 640px) {
+    font-size: 1.0rem;
+  }
 }
 
 .fa-angle-down {
